[up] change youtube url

--- a/websever/profile/index.html
+++ b/websever/profile/index.html
@@ -23,7 +23,7 @@
             <ul class="sns-main-container">
                 <li class="items items-insta" data-tilt data-tilt-max="25" data-tilt-speed="500" data-tilt-perspective="500" data-tilt-glare data-tilt-max-glare="0"><a href="https://www.instagram.com/mameshiba_daizu/" target="_blank" rel="noopener noreferrer"><img src="./assets/images/icon-instagram.svg" alt="インスタグラム"></a></li>
                 <li class="items items-twitter" data-tilt data-tilt-max="25" data-tilt-speed="400" data-tilt-perspective="500" data-tilt-glare data-tilt-max-glare="0"><a href="https://twitter.com/mameshiba_daizu" target="_blank" rel="noopener noreferrer"><img src="./assets/images/icon-twitter.svg" alt="ツイッター"></a></li>
-                <li class="items items-youtube" data-tilt data-tilt-max="25" data-tilt-speed="400" data-tilt-perspective="500" data-tilt-glare data-tilt-max-glare="0"><a href="https://www.youtube.com/channel/UCaH1UgAaG-aqGVj7pthdlzQ" target="_blank" rel="noopener noreferrer"><img src="./assets/images/icon-youtube.svg" alt="YouTube"></a></li>
+                <li class="items items-youtube" data-tilt data-tilt-max="25" data-tilt-speed="400" data-tilt-perspective="500" data-tilt-glare data-tilt-max-glare="0"><a href="https://www.youtube.com/@mameshiba_daizu/" target="_blank" rel="noopener noreferrer"><img src="./assets/images/icon-youtube.svg" alt="YouTube"></a></li>
                 <!-- <li class="items items-github" data-tilt data-tilt-max="25" data-tilt-speed="400" data-tilt-perspective="500" data-tilt-glare data-tilt-max-glare="0"><a href="#" target="_blank" rel="noopener noreferrer"><img src="./assets/images/icon-github.svg" alt="github"></a></li> -->
             </ul>
 
